Adicionado animações com keyframes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
   
   <header>
+    <div>
       <img src="https://github.com/rodrigues14.png" alt="Foto de Lucas">
+    </div>
   </header>
 
   <main>
